--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "appwrite": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.2",
     "react-icons": "^4.9.0",
     "sass": "^1.62.1"
   },
